Fixed valume control being too large on firefox

--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -441,7 +441,7 @@ button
   &>i
     flex: 0 0 1em
   &>input
-    flex: 1 2 5em
+    flex: 1 2 3em
     margin: 0
 
 
@@ -562,7 +562,8 @@ button
     right: 1em
     top: 0.5em
     &>.volume-control
-      flex: 0 0 8em
+      flex: 1 1 5em
+      overflow: hidden
     &>button
       flex: 0 0 2em
 
